2009-06-26  Brett Wilson  <brettw@chromium.org>

Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=26759

        GIFImageDecoder is broken.

        Make the GIFImageDecoder.repetitionCount function const to match the
        base class. The mismatched definitions were causing the function to not
        get called.

        * platform/image-decoders/gif/GIFImageDecoder.cpp:
        (WebCore::GIFImageDecoder::repetitionCount):
        * platform/image-decoders/gif/GIFImageDecoder.h:


Canonical link: https://commits.webkit.org/36980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45293 268f45cc-cd09-0410-ab3c-d52691b4dbfc